--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,9 @@
   "plugins": ["react-hooks"],
   "rules": {
     "semi": ["error", "always"],
-    "quotes": ["error", "double"],
+    "quotes": ["error", "single"],
     "no-console": "warn",
+    "object-curly-spacing": "off",
     "react/jsx-sort-props": [
       "warn",
       {
@@ -20,6 +21,8 @@
       }
     ],
     "react/prop-types": "off",
-    "@typescript-eslint/no-unused-vars": "error"
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-shadow": "error",
+    "@typescript-eslint/object-curly-spacing": ["error", "never"]
   }
 }
