--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,26 @@
 {
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "project": ["./tsconfig.json"]
+  },
+  "settings": {
+    "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "react": {
+      "version": "detect"
+    }
+  },
   "extends": [
     "airbnb-typescript",
     "eslint:recommended",
@@ -8,7 +30,6 @@
     "plugin:jsx-a11y/recommended",
     "plugin:prettier/recommended"
   ],
-  "plugins": ["react-hooks"],
   "rules": {
     "semi": ["error", "always"],
     "quotes": ["error", "single"],
@@ -25,7 +46,19 @@
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-shadow": "error",
-    "@typescript-eslint/object-curly-spacing": ["error", "never"]
+    "@typescript-eslint/no-shadow": "off",
+    "@typescript-eslint/object-curly-spacing": ["error", "never"],
+    "@typescript-eslint/default-param-last": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-use-before-define": [
+      "warn",
+      {"functions": false, "variables": false}
+    ],
+    "@typescript-eslint/no-unused-expressions": [
+      "warn",
+      {"allowShortCircuit": true}
+    ],
+    "import/extensions": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
