--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "eslint-config-react-ts",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "eslint configuration for react with TS",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.10.0",
+    "eslint-config-airbnb-typescript": "^16.1.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jsx": "^0.1.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.3",
